# jvmti

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yml
benches/: classfile_parse.rs
docs/: API_STABILITY.md  ATTACH.md  BENCHMARKS.md  COMPARISON.md  COMPATIBILITY.md  EMBEDDING.md  FIRST_AGENT.md  PITFALLS.md  PUBLIC_API.md  PUBLIC_API_REPORT.md  SAFETY.md  STYLE_GUIDE.md  VERSIONING.md
examples/: attach_logger.rs  class_logger.rs  embed.rs  event_abi_smoke.rs  heap_sampler.rs  method_counter.rs  minimal.rs  profiler.rs  tracer.rs
scripts/: prove-event-callback-matrix.sh  public_api_report.sh
src/: classfile.rs  embed.rs  env.rs  jni_wrapper.rs  jvmti_wrapper.rs  lib.rs  prelude.rs  wrapper.rs
src/advanced/: heap_graph.rs  mod.rs
src/sys/: jni.rs  jvmti.rs  mod.rs
templates/agent-starter/: Cargo.toml  README.md
templates/agent-starter/src/: lib.rs
tests/: api.rs  classfile.rs  embed_api.rs  jvmti_event_abi.rs
