# jvmti - Complete JNI/JVMTI bindings for Rust
#
# Zero dependencies. Verified against JDK 27. Compatible with JDK 8+.

[package]
name = "jvmti-bindings"
version = "2.0.2"
edition = "2021"
rust-version = "1.70"

description = "Complete JNI and JVMTI bindings for Rust with zero dependencies. Build JVM agents in pure Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/JavaPerformance/jvmti"
documentation = "https://docs.rs/jvmti-bindings"
readme = "README.md"
keywords = ["jvm", "jni", "jvmti", "java", "agent"]
categories = ["api-bindings", "development-tools::profiling", "external-ffi-bindings"]

[dependencies]
# No external dependencies - all JNI/JVMTI bindings are internal

[features]
default = []
advanced = []
heap-graph = ["advanced"]

[dev-dependencies]
criterion = "0.5"

[lib]
crate-type = ["rlib"]

[package.metadata.docs.rs]
all-features = true

# Examples are provided as templates, not runnable binaries.
# JVMTI agents must be built as cdylib in your own crate.
# See examples/*.rs for copy-paste templates.
#
# To use, create your own crate with:
#   [lib]
#   crate-type = ["cdylib"]
#
#   [dependencies]
#   jvmti = "0.1"

[[example]]
name = "minimal"
crate-type = ["cdylib"]

[[example]]
name = "method_counter"
crate-type = ["cdylib"]

[[example]]
name = "class_logger"
crate-type = ["cdylib"]

[[example]]
name = "profiler"
crate-type = ["cdylib"]

[[example]]
name = "tracer"
crate-type = ["cdylib"]

[[example]]
name = "heap_sampler"
crate-type = ["cdylib"]

[[bench]]
name = "classfile_parse"
harness = false
